[package]
name = "navitain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# kube = { version = "0.77.0", features = ["runtime", "derive"] }
# k8s-openapi = { version = "0.16.0", features = ["v1_25"] }
kube = { version = "0.90.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21.1", features = ["v1_26"] }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "signal"] }
backoff = "0.4.0"
futures = "0.3.30"
anyhow = "1.0.83"
log = "0.4.21"
tracing = "0.1.40"
thiserror = "1.0.59"
schemars = "0.8.17"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.34"
