[package]
name = "navitain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# kube = { version = "0.77.0", features = ["runtime", "derive"] }
# k8s-openapi = { version = "0.16.0", features = ["v1_25"] }
kube = { version = "0.97.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.23", features = ["v1_26"] }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "signal"] }
backoff = "0.4.0"
futures = "0.3.31"
anyhow = "1.0.95"
log = "0.4.22"
tracing = "0.1.41"
thiserror = "2.0.11"
schemars = "0.8.21"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde_yaml = "0.9.34"
